// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
type TupleWithRest = [number, ...(1 extends 2 ? string[] : number[])];

=====================================output=====================================
type TupleWithRest = [number, ...(1 extends 2 ? string[] : number[])];

================================================================================
`;

exports[`complex.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type TupleWithRest = [number, ...(1 extends 2 ? string[] : number[])];

=====================================output=====================================
type TupleWithRest = [number, ...(1 extends 2 ? string[] : number[])];

================================================================================
`;

exports[`infer-type.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
type Tail<T extends any[]> = T extends [infer U, ...infer R] ? R : never;

// should remove parens from this, to avoid a type issue with TypeScript 4.0:
type Tail2<T extends any[]> = T extends [infer U, ...(infer R)] ? R : never;

// but not remove parens from this:
type Tail3<T extends any[]> = T extends [infer U, ...(infer R)[]] ? R : never;

type ReduceNextElement<
  T extends readonly unknown[]
> = T extends readonly [infer V, ...infer R] ? [V, R] : never

=====================================output=====================================
type Tail<T extends any[]> = T extends [infer U, ...infer R] ? R : never;

// should remove parens from this, to avoid a type issue with TypeScript 4.0:
type Tail2<T extends any[]> = T extends [infer U, ...infer R] ? R : never;

// but not remove parens from this:
type Tail3<T extends any[]> = T extends [infer U, ...(infer R)[]] ? R : never;

type ReduceNextElement<T extends readonly unknown[]> = T extends readonly [
  infer V,
  ...infer R
]
  ? [V, R]
  : never;

================================================================================
`;

exports[`infer-type.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Tail<T extends any[]> = T extends [infer U, ...infer R] ? R : never;

// should remove parens from this, to avoid a type issue with TypeScript 4.0:
type Tail2<T extends any[]> = T extends [infer U, ...(infer R)] ? R : never;

// but not remove parens from this:
type Tail3<T extends any[]> = T extends [infer U, ...(infer R)[]] ? R : never;

type ReduceNextElement<
  T extends readonly unknown[]
> = T extends readonly [infer V, ...infer R] ? [V, R] : never

=====================================output=====================================
type Tail<T extends any[]> = T extends [infer U, ...infer R] ? R : never;

// should remove parens from this, to avoid a type issue with TypeScript 4.0:
type Tail2<T extends any[]> = T extends [infer U, ...infer R] ? R : never;

// but not remove parens from this:
type Tail3<T extends any[]> = T extends [infer U, ...(infer R)[]] ? R : never;

type ReduceNextElement<T extends readonly unknown[]> = T extends readonly [
  infer V,
  ...infer R,
]
  ? [V, R]
  : never;

================================================================================
`;

exports[`simple.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
type X = [...number[]];

=====================================output=====================================
type X = [...number[]];

================================================================================
`;

exports[`simple.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type X = [...number[]];

=====================================output=====================================
type X = [...number[]];

================================================================================
`;
